AuthController fix